--- a/mod.conf
+++ b/mod.conf
@@ -1,2 +1,6 @@
 name = mesecons_audio
-depends = mesecons
+depends = default, mesecons
+description = Adds a block for using audio in Minetest. Needs the mesecons_audio privileg for setting (but not for playing).
+title = Mesecons Audio
+author = mmm-sued, with great improvements by Isidor Zeuner
+min_minetest_version = 5.3
